@@ -1,14 +1,14 @@
 package eu.jasha.examples.controller;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.ModelMap;
+import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
 
 import eu.jasha.examples.model.ExampleForm;
 
@@ -16,15 +16,15 @@ import eu.jasha.examples.model.ExampleForm;
 @RequestMapping("/")
 public class HelloController {
 
-  @RequestMapping(value = "", method = RequestMethod.GET)
+  @GetMapping
   public String home(final ModelMap modelMap) {
     return showForm("jsp", modelMap);
   }
 
-  @RequestMapping(value = "{template}", method = RequestMethod.GET)
+  @GetMapping(value = "{template}")
   public String showForm(@PathVariable(value = "template") final String template,
                          final ModelMap model) {
-    final List<String> words = Arrays.asList("Aap", "<marquee>Noot</marquee>", "Mies");
+    final List<String> words = List.of("Aap", "<marquee>Noot</marquee>", "Mies");
     model.addAttribute("words", words);
     final ExampleForm form = new ExampleForm();
     form.setWord("Mies");
@@ -32,7 +32,7 @@ public class HelloController {
     return "index-" + template;
   }
 
-  @RequestMapping(value = "{template}", method = RequestMethod.POST)
+  @PostMapping(value = "{template}")
   public String handleForm(@PathVariable(value = "template") final String template,
                            @ModelAttribute("form") final ExampleForm formBean,
                            final ModelMap modelMap) {
